projects/kotlin-util/1.3/docs/it.czerwinski.kotlin.util/-right-projection/index.md
---
title: RightProjection - Kotlin utilities
---

[Kotlin utilities](../../index.html) / [it.czerwinski.kotlin.util](../index.html) / [RightProjection](./index.html)

# RightProjection

`data class ~~RightProjection~~<out L, out R>`
**Deprecated:** Either is right-biased. All methods from `RightProjection` should be called directly on `Either`.

### Constructors

| [&lt;init&gt;](-init-.html) | `RightProjection(either: `[`Either`](../-either/index.html)`<`[`L`](index.html#L)`, `[`R`](index.html#R)`>)` |

### Properties

| [either](either.html) | `val either: `[`Either`](../-either/index.html)`<`[`L`](index.html#L)`, `[`R`](index.html#R)`>` |

### Functions

| [all](all.html) | `fun all(predicate: (`[`R`](index.html#R)`) -> `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)`): `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)<br>Returns the result of applying the [predicate](all.html#it.czerwinski.kotlin.util.RightProjection$all(kotlin.Function1((it.czerwinski.kotlin.util.RightProjection.R, kotlin.Boolean)))/predicate) to the value if this is [Right](../-right/index.html) or `true` if this is [Left](../-left/index.html). |
| [any](any.html) | `fun any(predicate: (`[`R`](index.html#R)`) -> `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)`): `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)<br>Returns the result of applying the [predicate](any.html#it.czerwinski.kotlin.util.RightProjection$any(kotlin.Function1((it.czerwinski.kotlin.util.RightProjection.R, kotlin.Boolean)))/predicate) to the value if this is [Right](../-right/index.html) or `false` if this is [Left](../-left/index.html). |
| [filter](filter.html) | `fun filter(predicate: (`[`R`](index.html#R)`) -> `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)`): `[`Either`](../-either/index.html)`<`[`L`](index.html#L)`, `[`R`](index.html#R)`>?`<br>Returns the same [Right](../-right/index.html) if the [predicate](filter.html#it.czerwinski.kotlin.util.RightProjection$filter(kotlin.Function1((it.czerwinski.kotlin.util.RightProjection.R, kotlin.Boolean)))/predicate) is satisfied for the value. Otherwise returns `null`. |
| [filterIsInstance](filter-is-instance.html) | `fun <T> filterIsInstance(): `[`Either`](../-either/index.html)`<`[`L`](index.html#L)`, `[`T`](filter-is-instance.html#T)`>?`<br>Returns the same [Right](../-right/index.html) casted to type [T](filter-is-instance.html#T) if it is [T](filter-is-instance.html#T). Otherwise returns `null`. |
| [filterIsInstanceToOption](filter-is-instance-to-option.html) | `fun <T> filterIsInstanceToOption(): `[`Option`](../-option/index.html)`<`[`Either`](../-either/index.html)`<`[`L`](index.html#L)`, `[`T`](filter-is-instance-to-option.html#T)`>>`<br>Returns [Some](../-some/index.html) containing the same [Right](../-right/index.html) casted to type [T](filter-is-instance-to-option.html#T) if it is [T](filter-is-instance-to-option.html#T). Otherwise returns [None](../-none/index.html). |
| [filterNot](filter-not.html) | `fun filterNot(predicate: (`[`R`](index.html#R)`) -> `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)`): `[`Either`](../-either/index.html)`<`[`L`](index.html#L)`, `[`R`](index.html#R)`>?`<br>Returns the same [Right](../-right/index.html) if the [predicate](filter-not.html#it.czerwinski.kotlin.util.RightProjection$filterNot(kotlin.Function1((it.czerwinski.kotlin.util.RightProjection.R, kotlin.Boolean)))/predicate) is not satisfied for the value. Otherwise returns `null`. |
| [filterNotToOption](filter-not-to-option.html) | `fun filterNotToOption(predicate: (`[`R`](index.html#R)`) -> `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)`): `[`Option`](../-option/index.html)`<`[`Either`](../-either/index.html)`<`[`L`](index.html#L)`, `[`R`](index.html#R)`>>`<br>Returns [Some](../-some/index.html) containing the same [Right](../-right/index.html) if the [predicate](filter-not-to-option.html#it.czerwinski.kotlin.util.RightProjection$filterNotToOption(kotlin.Function1((it.czerwinski.kotlin.util.RightProjection.R, kotlin.Boolean)))/predicate) is not satisfied for the value. Otherwise returns [None](../-none/index.html). |
| [filterToOption](filter-to-option.html) | `fun filterToOption(predicate: (`[`R`](index.html#R)`) -> `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)`): `[`Option`](../-option/index.html)`<`[`Either`](../-either/index.html)`<`[`L`](index.html#L)`, `[`R`](index.html#R)`>>`<br>Returns [Some](../-some/index.html) containing the same [Right](../-right/index.html) if the [predicate](filter-to-option.html#it.czerwinski.kotlin.util.RightProjection$filterToOption(kotlin.Function1((it.czerwinski.kotlin.util.RightProjection.R, kotlin.Boolean)))/predicate) is satisfied for the value. Otherwise returns [None](../-none/index.html). |
| [forEach](for-each.html) | `fun forEach(action: (`[`R`](index.html#R)`) -> `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)`): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)<br>Runs [action](for-each.html#it.czerwinski.kotlin.util.RightProjection$forEach(kotlin.Function1((it.czerwinski.kotlin.util.RightProjection.R, kotlin.Unit)))/action) if this is a [Right](../-right/index.html). Returns [Unit](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html) without any action if this is a [Left](../-left/index.html). |
| [get](get.html) | `fun get(): `[`R`](index.html#R)<br>Gets value of this [Right](../-right/index.html). |
| [getOrNull](get-or-null.html) | `fun getOrNull(): `[`R`](index.html#R)`?`<br>Gets value of this [Right](../-right/index.html) or `null` if this is [Left](../-left/index.html). |
| [map](map.html) | `fun <T> map(transform: (`[`R`](index.html#R)`) -> `[`T`](map.html#T)`): `[`Either`](../-either/index.html)`<`[`L`](index.html#L)`, `[`T`](map.html#T)`>`<br>Maps value of this [Right](../-right/index.html) using [transform](map.html#it.czerwinski.kotlin.util.RightProjection$map(kotlin.Function1((it.czerwinski.kotlin.util.RightProjection.R, it.czerwinski.kotlin.util.RightProjection.map.T)))/transform). |
| [none](none.html) | `fun none(predicate: (`[`R`](index.html#R)`) -> `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)`): `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)<br>Returns `false` if the [predicate](none.html#it.czerwinski.kotlin.util.RightProjection$none(kotlin.Function1((it.czerwinski.kotlin.util.RightProjection.R, kotlin.Boolean)))/predicate) is met by the value if this is [Right](../-right/index.html) or `true` otherwise. |
| [toOption](to-option.html) | `fun toOption(): `[`Option`](../-option/index.html)`<`[`R`](index.html#R)`>`<br>Returns a [Some](../-some/index.html) containing the [Right](../-right/index.html) value if it exists, or a [None](../-none/index.html) if this is a [Left](../-left/index.html). |

### Extension Functions

| [asOption](../as-option.html) | `fun <T> `[`T`](../as-option.html#T)`?.asOption(): `[`Option`](../-option/index.html)`<`[`T`](../as-option.html#T)`>`<br>Returns [Some](../-some/index.html) if this is not `null` or [None](../-none/index.html) if this is `null`. |
| [filterNotNull](../filter-not-null.html) | `fun <L, R> `[`RightProjection`](./index.html)`<`[`L`](../filter-not-null.html#L)`, `[`R`](../filter-not-null.html#R)`?>.filterNotNull(): `[`Either`](../-either/index.html)`<`[`L`](../filter-not-null.html#L)`, `[`R`](../filter-not-null.html#R)`>?`<br>Returns the same [Right](../-right/index.html) if its value is not `null`. Otherwise returns `null`. |
| [filterNotNullToOption](../filter-not-null-to-option.html) | `fun <L, R> `[`RightProjection`](./index.html)`<`[`L`](../filter-not-null-to-option.html#L)`, `[`R`](../filter-not-null-to-option.html#R)`?>.filterNotNullToOption(): `[`Option`](../-option/index.html)`<`[`Either`](../-either/index.html)`<`[`L`](../filter-not-null-to-option.html#L)`, `[`R`](../filter-not-null-to-option.html#R)`>>`<br>Returns [Some](../-some/index.html) containing the same [Right](../-right/index.html) if its value is not `null`. Otherwise returns [None](../-none/index.html). |
| [filterOrElse](../filter-or-else.html) | `fun <L, R> `[`RightProjection`](./index.html)`<`[`L`](../filter-or-else.html#L)`, `[`R`](../filter-or-else.html#R)`>.filterOrElse(predicate: (`[`R`](../filter-or-else.html#R)`) -> `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)`, zero: () -> `[`L`](../filter-or-else.html#L)`): `[`Either`](../-either/index.html)`<`[`L`](../filter-or-else.html#L)`, `[`R`](../filter-or-else.html#R)`>?`<br>Returns the same [Right](../-right/index.html) if the [predicate](../filter-or-else.html#it.czerwinski.kotlin.util$filterOrElse(it.czerwinski.kotlin.util.RightProjection((it.czerwinski.kotlin.util.filterOrElse.L, it.czerwinski.kotlin.util.filterOrElse.R)), kotlin.Function1((it.czerwinski.kotlin.util.filterOrElse.R, kotlin.Boolean)), kotlin.Function0((it.czerwinski.kotlin.util.filterOrElse.L)))/predicate) is satisfied for the value, `Left(zero)` if the [predicate](../filter-or-else.html#it.czerwinski.kotlin.util$filterOrElse(it.czerwinski.kotlin.util.RightProjection((it.czerwinski.kotlin.util.filterOrElse.L, it.czerwinski.kotlin.util.filterOrElse.R)), kotlin.Function1((it.czerwinski.kotlin.util.filterOrElse.R, kotlin.Boolean)), kotlin.Function0((it.czerwinski.kotlin.util.filterOrElse.L)))/predicate) is not satisfied for the value, or the same [Left](../-left/index.html) if this is [Left](../-left/index.html). |
| [flatMap](../flat-map.html) | `fun <L, R, T> `[`RightProjection`](./index.html)`<`[`L`](../flat-map.html#L)`, `[`R`](../flat-map.html#R)`>.flatMap(transform: (`[`R`](../flat-map.html#R)`) -> `[`Either`](../-either/index.html)`<`[`L`](../flat-map.html#L)`, `[`T`](../flat-map.html#T)`>): `[`Either`](../-either/index.html)`<`[`L`](../flat-map.html#L)`, `[`T`](../flat-map.html#T)`>`<br>Maps value of this [Right](../-right/index.html) to a new [Either](../-either/index.html) using [transform](../flat-map.html#it.czerwinski.kotlin.util$flatMap(it.czerwinski.kotlin.util.RightProjection((it.czerwinski.kotlin.util.flatMap.L, it.czerwinski.kotlin.util.flatMap.R)), kotlin.Function1((it.czerwinski.kotlin.util.flatMap.R, it.czerwinski.kotlin.util.Either((it.czerwinski.kotlin.util.flatMap.L, it.czerwinski.kotlin.util.flatMap.T)))))/transform). |
| [getOrElse](../get-or-else.html) | `fun <L, R> `[`RightProjection`](./index.html)`<`[`L`](../get-or-else.html#L)`, `[`R`](../get-or-else.html#R)`>.getOrElse(default: () -> `[`R`](../get-or-else.html#R)`): `[`R`](../get-or-else.html#R)<br>Gets value of this [Right](../-right/index.html) or [default](../get-or-else.html#it.czerwinski.kotlin.util$getOrElse(it.czerwinski.kotlin.util.RightProjection((it.czerwinski.kotlin.util.getOrElse.L, it.czerwinski.kotlin.util.getOrElse.R)), kotlin.Function0((it.czerwinski.kotlin.util.getOrElse.R)))/default) value if this is [Left](../-left/index.html). |

